2008-12-22  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Request modules emulating mb functions.
	* configure.ac: Do not look for mb functions here.

2008-10-03  Paolo Bonzini  <bonzini@gnu.org>
	    Jim Meyering  <meyering@redhat.com>

	* autoboot.conf: Add localcharset.
	* Makefile.am: Remove intl subdir.  Require Automake 1.10.
	* configure.ac: Remove useless macros, switch to external gettext.
	* lib/Makefile.am: Remove intl subdir from CPPFLAGS.
	* sed/Makefile.am: Remove intl subdir from CPPFLAGS.

2008-10-02  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* testsuite/Makefile.am: Add the utf8-{1,2,3,4} tests.
	* testsuite/Makefile.tests: Add the utf8-{1,2,3,4} tests.
	* testsuite/runtest: Support skipping tests.
	* testsuite/utf8-1.good: New.
	* testsuite/utf8-1.inp: New.
	* testsuite/utf8-1.sed: New.
	* testsuite/utf8-2.good: New.
	* testsuite/utf8-2.inp: New.
	* testsuite/utf8-2.sed: New.
	* testsuite/utf8-3.good: New.
	* testsuite/utf8-3.inp: New.
	* testsuite/utf8-3.sed: New.
	* testsuite/utf8-4.good: New.
	* testsuite/utf8-4.inp: New.
	* testsuite/utf8-4.sed: New.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* BUGS: Document s/.*.// behavior with invalid multibyte sequences.
	* NEWS: Document `z' extension.
	* doc/sed-in.texi: Document both things.
	* sed/compile.c (compile_program): Recognize `z'.
	* sed/execute.c (execute_program): Execute `z'.
	* testsuite/Makefile.am: Add badenc test.
	* testsuite/Makefile.tests: Add badenc test.
	* testsuite/badenc.good: New.
	* testsuite/badenc.inp: New.
	* testsuite/badenc.sed: New.

2008-09-28  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h: Replace alloca cruft with alloca.h.
	* bootstrap.sh.in: Update for new gnulib.
	* bootstrap.sh: Update for new gnulib.
	* configure.ac: Move gnulib macros earlier.